--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
       {
         "targets": {
           "browsers": [
-            "ie 11"                        
+            "edge 15"
           ]
         },
         "modules": false
