--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "modulePathIgnorePatterns": [
       "<rootDir>/dist/",
       "<rootDir>/examples/"
-    ]
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setup.js"
+    ],
+    "testEnvironment": "jest-environment-jsdom-fourteen"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -31,7 +35,9 @@
     "@babel/preset-env": "^7.0.0",
     "babel-jest": "^24.9.0",
     "del": "^5.0.0",
+    "document-register-element": "^1.14.3",
     "jest": "^24.9.0",
+    "jest-environment-jsdom-fourteen": "^0.1.0",
     "rollup": "^1.20.1",
     "rollup-plugin-babel": "^4.3.3",
     "standard": "^14.0.2"
