--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "private": true,
   "name": "wc-context",
   "version": "0.8.0",
-  "description": "Simple context for HTML custom elements",
+  "description": "Context for HTML custom elements / web components",
   "repository": "blikblum/wc-context",
   "author": "Luiz Américo Pereira Câmara",
   "contributors": [
@@ -46,8 +45,6 @@
     "lint": "standard src test tools",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cover": "jest --coverage",
-    "build": "node tools/build",
-    "prepublish": "npm run build"
+    "test:cover": "jest --coverage"
   }
 }
