--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "files": [
     "core.js",
     "lit-element.js",
-    "skatejs.js",
     "wc-context.js"
   ],
   "jest": {
@@ -49,8 +48,8 @@
     "prettier": "^2.5.1"
   },
   "scripts": {
-    "format": "prettier lit-element.js skatejs.js wc-context.js core.js test --write",
-    "lint": "eslint lit-element.js skatejs.js wc-context.js core.js test",
+    "format": "prettier lit-element.js wc-context.js core.js test --write",
+    "lint": "eslint lit-element.js wc-context.js core.js test",
     "start": "web-dev-server --open examples/ --node-resolve",
     "start:watch": "web-dev-server --open examples/ --node-resolve --watch",
     "test": "jest",
