--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lit": "^2.6.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "vitepress": "^1.0.0-alpha.45",
+    "vue": "^3.2.47"
   },
   "exports": {
     ".": "./wc-context.js",
@@ -51,6 +53,9 @@
     "./context-provider.js": "./context-provider.js"
   },
   "scripts": {
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
     "format": "prettier lit-element.js lit.js wc-context.js core.js test --write",
     "lint": "eslint lit-element.js lit.js wc-context.js core.js test",
     "start": "web-dev-server --open examples/ --node-resolve",
