--- a/package.json
+++ b/package.json
@@ -34,20 +34,26 @@
     "testEnvironment": "jsdom"
   },
   "devDependencies": {
+    "@open-wc/testing": "^3.2.0",
     "@types/istanbul-lib-report": "^3.0.0",
     "@types/istanbul-reports": "^3.0.1",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^20.2.5",
-    "@web/dev-server": "^0.1.35",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "lit": "^2.6.1",
-    "prettier": "^2.5.1",
-    "typescript": "^5.1.3",
-    "vitepress": "^1.0.0-alpha.46",
-    "vue": "^3.2.47"
+    "@types/node": "^20.4.8",
+    "@web/dev-server": "^0.3.0",
+    "@web/test-runner": "^0.17.0",
+    "@web/test-runner-puppeteer": "^0.14.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "jsdom": "^22.1.0",
+    "lit": "^2.8.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vitepress": "^1.0.0-beta.7",
+    "vitest": "^0.34.1",
+    "vue": "^3.3.4"
   },
   "exports": {
     ".": "./core.js",
@@ -67,6 +73,8 @@
     "start": "web-dev-server --open examples/ --node-resolve",
     "start:watch": "web-dev-server --open examples/ --node-resolve --watch",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "test-example:wtr": "web-test-runner examples/testing/wtr.test.js --node-resolve --puppeteer",
+    "test-example:vitest": "vitest vitest.test.js --run --environment jsdom",
     "types": "tsc"
   }
 }
