--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
-    "vitepress": "^1.0.0-beta.7",
-    "vitest": "^0.34.1",
+    "vitepress": "^1.0.0-rc.25",
+    "vitest": "beta",
     "vue": "^3.3.4"
   },
   "exports": {
